Add backend accounts slice
